# llm-security-lab

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
examples/: real_claude_defended_rag.py  run_harness.py
src/llm_lab/: __init__.py
src/llm_lab/harness/: __init__.py  eval_harness.py
src/llm_lab/patterns/: __init__.py  rag.py  structured_output.py  tool_use.py
src/llm_lab/providers/: __init__.py  base.py  claude.py  mock.py
src/llm_lab/security/: __init__.py  attacks.py  defenses.py
tests/: test_defenses.py  test_harness_naive_vs_defended.py  test_operator_channel.py  test_rag_data_borne_injection.py  test_structured_output.py  test_tool_use_privilege_separation.py
